traefik/pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-no-annotation.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-no-annotation
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: whoami.localhost
      http:
        paths:
          - backend:
              service:
                name: whoami
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - whoami.localhost
      secretName: whoami-tls
